--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@rcb-plugins/llm-connector": "^0.3.2",
     "@rcb-plugins/markdown-renderer": "^0.3.1",
-    "@wllama/wllama": "^2.3.5",
     "react": "^18.3.1",
     "react-chatbotify": "^2.3.0",
     "react-dom": "^18.3.1",
@@ -16,7 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:analyze": "npm run build && npx serve -s build",
+    "lint": "eslint src --ext .js,.jsx --fix",
+    "clean": "rm -rf build node_modules package-lock.json && npm install",
+    "deploy:check": "npm run build && echo 'Build successful! Ready for deployment'"
   },
   "eslintConfig": {
     "extends": [
